Add iframe example

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<style>#report{font-family: Verdana, Geneva, sans-serif;font-size: 12px;border-collapse: collapse;width: 90%}#report td, #report th{border: 1px solid #ddd;padding: 4px}#report th{padding-top: 12px;padding-bottom: 12px;text-align: left;background-color: #5E81AC;color: white}.warning{color: red;font-weight: bold}p{font-family: Verdana, Geneva, sans-serif;font-size: 13px}h3{font-family: Verdana, Geneva, sans-serif}footer{text-align: center;padding: 3px}</style>
 	</head>
 	<body>
+		<iframe src="https://github.com/CFS-Database-Team/mssql-health-stats/blob/main/mssql-database-info.sql" height="200" width="300" title="Iframe Example"></iframe>
 		<h3>MSSQL Server Version</h3>
 		<table id="report">
 			<tr>
